2004-11-28  0.8.1.44  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.h: Fix for the macro that would have bad side effects
	when used in if statements
	* client/common/client.c, server/pregame.c: Enable sending the bank by
	the server
	* client/gtk/gui.c(gui_highlight_chits),
	client/gtk/guimap.c(guimap_highlight_chits): Enable highlighted chits
	when reconnected.

2004-11-21  0.8.1.43  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/offline.c(frontend_offline): Game|Connect incorrectly
	available when client is started with a commandline with server and
	port
	* client/gtk/guimap.c(guimap_cursor_move): Crash when leaving the map
	with a cursor active
	* client/gtk/chat.c, client/gtk/develop.c, client/gtk/discard.c,
	client/gtk/gold.c, client/gtk/gui.c, client/gtk/player.c,
	client/gtk/resource.c: Main screen consistent again, now without
	frames
	* client/common/callback.c, client/gtk/connect.c,
	client/gtk/develop.c, client/gtk/discard.c, client/gtk/frontend.c,
	client/gtk/frontend.h, client/gtk/gameover.c, client/gtk/gold.c,
	client/gtk/gui.c, client/gtk/gui.h, client/gtk/guimap.c,
	client/gtk/guimap.h, client/gtk/histogram.c, client/gtk/identity.c,
	client/gtk/legend.c, client/gtk/monopoly.c, client/gtk/offline.c,
	client/gtk/player.c, client/gtk/plenty.c, client/gtk/quote.c,
	client/gtk/resource.c, client/gtk/settingscreen.c, client/gtk/state.c,
	client/gtk/trade.c: Preparations for 'Leave Game', added some
	constness, chat disabled when offline, frontend_gui_register_* can
	handle more than one widget, removed toolbar hack (not needed anymore)
	* client/gtk/guimap.c: Removed compiler warnings when compiling with
	--pedantic
	* ai/client.c, ai/client.h: Removed dead code
	* client/common/client.c, common/common_glib.c, common/driver.h,
	common/state.c, common/state.h, common/gtk/common_gtk.c: Removed
	reference to widget from StateMachine. The code was moved to the gtk
	directory in 0.8.0
		
2004-11-12 Roland Clobus <rclobus@bigfoot.com>