@@ -6,6 +6,8 @@
 	* client/gtk/gui.c(gui_highlight_chits),
 	client/gtk/guimap.c(guimap_highlight_chits): Enable highlighted chits
 	when reconnected.
+	* client/gtk/monopoly.c(monopoly_create_dlg): Only show one dialog
+	when reconnecting.
 
 2004-11-21  0.8.1.43  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/offline.c(frontend_offline): Game|Connect incorrectly
